kubernetes/apps/model-pipeline/phpmyadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  namespace: model-pipeline
  labels:
    app: phpmyadmin
spec:
  type: ClusterIP
  selector:
    app: phpmyadmin
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
